
*Turrets
NEW TURRET BEHAVIOR: Turrets are now configurable to what zombie type they should prioritize targeting!
- Right click on the turret that you want to configure and select the zombie types and mutant priority to your liking

Turret Prioties:
- Don't Prioritize Mutants: Will target a zombie that is nearest to the turret within its detection range
- Prioritize Mutants: Will target the nearest mutated zombie within its detection range - will still target unmutated zombies if there are not any mutated ones inside its detection range
- All Zombies: Targets any zombie that is nearest to the turret within the turret's detection range
- Walkers: Only targets walkers
- Miners: Only targets miners
- Ferals: Only targets ferals

NEW TURRET: The Storm Weaver - fires a bolt of lightning that bounces off zombies; its detection range is short but each bolt of lightning reaches far and wide!
- firing rate of the storm weaver is 10 seconds
- detection range of the storm weaver is 18 blocks
- the sonic cannon now fires its sonic blast similar to the warden
- zombies now get pushed back by the sonic blast of the sonic cannon
- reduced sonic cannon firing rate
- slightly reduced sonic cannon damage
- improved pyro charger flamethrower physics and particles
- pyro charger now only burns zombies

*Utility
NEW UTILITY ENTITY: The Collector Drone
- an incredibly useful tool for the player when they want to collect items and XP in the area but there are too many zombies
- the drone can collect whether items or XPs within a radius of 64 blocks
- fully configurable by the player by right clicking it
- it also has a remote control that the player can use to whether set between two modes: Collection Mode and Follow Owner
- when first spawning the drone, you have to set it to active first before it can start collecting anything by right clicking and setting the active toggle to on