@@ -13,8 +13,8 @@
 				},
 				"effect": {
 					"on_entry": [
-						"/damage @e[type=!item, family=!zombie, family=!projectile, r=3] 2 entity_attack entity @s",
-						"/effect @e[type=!item, family=!zombie, family=!projectile, family=!turret, r=3] poison 3 0"
+						"/damage @e[type=!item, type=!armor_stand, family=!zombie, family=!projectile, r=3] 2 entity_attack entity @s",
+						"/effect @e[type=!item, type=!armor_stand, family=!zombie, family=!projectile, family=!turret, r=3] poison 3 0"
 					],
 					"transitions": [
 						{
@@ -36,8 +36,8 @@
 				},
 				"effect": {
 					"on_entry": [
-						"/damage @e[type=!item, family=!zombie, family=!projectile, r=5] 4 entity_attack entity @s",
-						"/effect @e[type=!item, family=!zombie, family=!projectile, family=!turret, r=5] poison 5 1"
+						"/damage @e[type=!item, type=!armor_stand, family=!zombie, family=!projectile, r=5] 4 entity_attack entity @s",
+						"/effect @e[type=!item, type=!armor_stand, family=!zombie, family=!projectile, family=!turret, r=5] poison 5 1"
 					],
 					"transitions": [
 						{
