@@ -63,6 +63,20 @@
 								"event": "minecraft:become_angry",
 								"target": "self"
 							}
+						},
+						{
+							"on_damage": {
+								"filters": {
+									"any_of": [
+										{
+											"test": "is_family",
+											"subject": "other",
+											"value": "zombie"
+										}
+									]
+								}
+							},
+							"deals_damage": false
 						}
 					]
 				}
