@@ -95,6 +95,24 @@
 			"minecraft:behavior.float": {
 				"priority": 5
 			},
+			"minecraft:damage_sensor": {
+				"triggers": [
+					{
+						"on_damage": {
+							"filters": {
+								"any_of": [
+									{
+										"test": "is_family",
+										"subject": "other",
+										"value": "zombie"
+									}
+								]
+							}
+						},
+						"deals_damage": false
+					}
+				]
+			},
 			"minecraft:hurt_on_condition": {
 				"damage_conditions": [
 					{
