@@ -6,7 +6,6 @@
 			"population_control": "monster"
 		},
 		"conditions": [
-			//To wallker
 			{
 				"minecraft:spawns_on_surface": {},
 				"minecraft:brightness_filter": {
@@ -21,16 +20,12 @@
 				"minecraft:world_age_filter": {
 					"min": 1200 //Day 2
 				},
-				"minecraft:distance_filter": {
-					"min": 32,
-					"max": 96
-				},
 				"minecraft:weight": {
 					"default": 100
 				},
 				"minecraft:herd": {
 					"min_size": 8,
-					"max_size": 21
+					"max_size": 8
 				},
 				"minecraft:density_limit": {
 					"surface": 256
