@@ -311,8 +311,16 @@ NEW ZOMBIE BEHAVIORS: Mutated Zombies - existing and new zombie types now have a
 - when not on a full moon, the miner zombie now has a 3% chance of becoming a mutated miner which is a TNT throwing miner, has more health and moves faster on easy difficulty, 8% on normal, and 12% on hard difficulty. When on a full moon, it has an 8% chance to mutate on easy difficulty, 16% chance on normal, and 30% on hard on spawn
 - when not on a full moon, the feral zombie now has a 10% chance of becoming a mutated feral which has the ability to leap really high, more health, slightly has more damage, and a chance to headbutt its target on easy difficulty, 20% on normal, and 40% on hard difficulty. When on a full moon, it has a 25% chance to mutate on easy difficulty, 40% on normal, and 60% chance on hard difficulty on spawn
 
+- NEW ZOMBIE: The Spitter - a ranged zombie that spits balls of acid that explode on impact and leaves an area of effect that damages and poisons nearby entities for 10 seconds
+- starts spawning on day 15
+- minimum firing range is 8 blocks, if its target is less than that, it will move away first before shooting
+- targets: players, villagers, illagers, golems and turrets - turrets are the least prioritized targets
+- acid projectiles that directly hit the player gives them nausea for 3 seconds
+- normal spitters have 30 hitpoints, movement speed the same as a normal miner, have a maximum firing range of 12 blocks and their acid puddle effect radius is 3 blocks, damage per tick is 2 and inflicts poison I effect to entities that are not zombies
+- mutated spitters have 40 hitpoints, movement speed the same as a mutated walker, have a maximum firing range of 24 blocks and their acid puddle effect radius is 5 blocks, damage per tick is 4 and inflicts poison II effect to entities that are not zombies
+
 *Turrets
-NEW TURRET BEHAVIOR: Turrets are now configurable to what zombie type they should prioritize targeting!
+NEW TURRET FEATURE: Turrets are now configurable to what zombie type they should prioritize targeting!
 - Right click on the turret that you want to configure and select the zombie types and mutant priority to your liking
 
 Turret Prioties:
